# ClinicalTrialOptimizationAI

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  verify.py
server/: app.py  environment.py  grader.py
